--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             display: block;
             margin: auto;
             margin-top: 50px;
-            height: 400px;
-            width: 400px;
+            height: 50vh;
+            /* width: 400px; */
         }
         
     </style>
